1999-12-06  Gerd Moellmann  <gerd@gnu.org>

	* simple.el (insert-buffer): Doc fix.

	* apropos.el (apropos-mode): Add autoload cookie.

1999-12-06  Sam Steingold  <sds@goems.com>

	* progmodes/etags.el (etags-tags-completion-table): Modified the
	regexp to allow for the CL symbols starting with `+*'.
	(tags-completion-table): Doc fix (it's an obarray, not an alist).
	(tags-completion-table, tags-recognize-empty-tags-table): Remove
	`function' quoting lambda.
	(tags-with-face): New macro.
	(list-tags, tags-apropos): Use it.
	(tags-apropos-additional-actions): New user option.
	(etags-tags-apropos-additional): Use it.
	(tags-apropos): Call etags-tags-apropos-additional.
	(tags-apropos-verbose): New user option.
	(etags-tags-apropos): Use it.
	(visit-tags-table-buffer, next-file): Use `unless'.
	(recognize-empty-tags-table): Renamed to
	tags-recognize-empty-tags-table.
	(complete-tag): Call tags-complete-tag bypassing try-completion.
	
1999-12-06  Kenichi Handa  <handa@etl.go.jp>

	* international/mule.el (set-buffer-file-coding-system): Docstring
	modified.

1999-12-05  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* textmodes/bibtex.el (bibtex-hs-forward-sexp): Added to support
	using the hideshow package.
	(hs-special-modes-alist): Added entry for bibtex to allow the use
	of the hideshow package.
	(bibtex-hide-entry-bodies): Deleted as hiding of entry bodies is
	not longer provided by bibtex.el directly.  Instead the hideshow
	package should be used.
	(bibtex-mode-map, bibtex-edit-menu, bibtex-mode): Delete
	references to bibtex-hide-entry-bodies.

1999-12-05  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* textmodes/bibtex.el: Copyright notice is up to date.  Moved
	maintainer information closer to the beginning of the bibtex.el
	file.
	(bibtex-maintainer-salutation): New constant.
        (bibtex-version): New constant.
        (bibtex-submit-bug-report): Use bibtex-version and
	bibtex-maintainer-salutation.
	(bibtex-entry-field-alist): Made booktitle field optional for